--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <footer>
         <p>&copy; 2024 Roman Numeral Converter</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
